# TaskFlow

./: .gitignore  README.md  main.py  package.json  pyproject.toml  tailwind.config.js
taskflow/: db.sqlite3
taskflow/accounts/: adapters.py  context_processors.py  forms.py  models.py  urls.py  views.py
taskflow/accounts/migrations/: 0001_initial.py  0002_profile_profile_picture.py  0003_alter_profile_user.py  0004_alter_profile_profile_picture.py  0005_profile_job_title_profile_phone_number.py  0006_profile_education_level_profile_skills.py
taskflow/comments/: forms.py  models.py
taskflow/comments/migrations/: 0001_initial.py
taskflow/notifications/: models.py  tasks.py  urls.py  views.py
taskflow/notifications/migrations/: 0001_initial.py  0002_alter_notification_actor.py  0003_alter_notification_actor.py
taskflow/projects/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
taskflow/projects/migrations/: 0001_initial.py  0002_project_priority_project_status.py  0003_alter_project_options_project_due_date_and_more.py  0004_project_owner.py  0005_project_team.py  0006_project_client_company.py  0007_project_amount_spent_project_estimated_duration_and_more.py  0008_attachments.py  0009_alter_attachments_options.py
taskflow/static/css/: input.css
taskflow/taskflow/: celery.py  settings.py  urls.py
taskflow/tasks/: forms.py  models.py  urls.py  views.py
taskflow/tasks/migrations/: 0001_initial.py  0002_rename_project_task_project.py  (+3 more)
taskflow/teams/: forms.py  models.py  urls.py  views.py
taskflow/templates/: base.html
(+27 files in other folders)
