[project]
name = "taskflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.5.3",
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.6",
    "django-allauth[socialaccount]>=65.12.0",
    "django-allauth-ui>=1.8.1",
    "django-celery-beat>=2.8.1",
    "django-crispy-forms>=2.4",
    "django-phonenumber-field[phonenumbers]>=8.2.0",
    "django-tempus-dominus>=5.1.2.17",
    "django-widget-tweaks>=1.5.0",
    "ipython>=8.37.0",
    "pillow>=11.3.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "slippers>=0.6.2",
]
